BrndBot/web/css/main1.css
/* ... */
.group2 label{
    position: relative;
    top:-56px;
    left:-2px;
    font-family: "proxima-nova",sans-serif;
font-style: normal;
font-weight: 400;
font-size: 12px;
color: #2c4355;
text-align: left;
line-height: 14.4px;
letter-spacing:0em;
opacity: 1;
}
.group  div label{
 font-family: "proxima-nova",sans-serif;
font-style: normal;
font-weight: 400;
font-size: 12px;
color: #2c4355;
text-align: left;
line-height: 14.4px;
letter-spacing:0em;
opacity: 1;
position:relative;
margin-top: 6px;

}
.sublingrp div input{
    position: relative;
    margin-top: 40px;
    width:500px;
}
.sublingrp  div label{
 font-family: "proxima-nova",sans-serif;
font-style: normal;
font-weight: 400;
font-size: 12px;
color: #2c4355;
text-align: left;
line-height: 14.4px;
letter-spacing:0em;
opacity: 1;
position: relative;
top:-33px;
left:0px;
}
/* form starting stylings ------------------------------- */
#from_address,#reply_email_address,#list_name,#default_from_name,#list_description,#title    {
    border: none ;
    -webkit-box-shadow: none !important;
 -moz-box-shadow: none !important;
   box-shadow: none !important ;
  border-bottom:1px solid #757575;
  border-radius:0px;
  font-size:18px;
  padding:10px 10px 10px 5px;
  display:block;
  width:220px;
  border:none;
  border-bottom:1px solid #757575;
}
input               {
    border: none ;

 -webkit-box-shadow: none !important;
 -moz-box-shadow: none !important;
   box-shadow: none !important ;
  border-bottom:1px solid #757575;
  border-radius:0px; 
    
    
    
  font-size:18px;
  padding:10px 10px 10px 5px;
  display:block;
  width:300px;
  border:none;
  border-bottom:1px solid #757575;
}
input:focus         { outline:none; }

/* LABEL ======================================= */
label                {
  color:#999; 
  font-size:14px;
  font-weight:normal;
  position:absolute;
  pointer-events:none;
  left:15px;
  top:10px;
  transition:0.7s ease all; 
  -moz-transition:0.7s ease all; 
  -webkit-transition:0.7s ease all;
}
.inputsubline{
                font-size:18px;
                position: relative;
                padding-top:10%;
                margin-left: -11px;
}
/* active state */
#title:focus ~ label, .inputsubline:valid ~ label     {
    left:-40px;
  font-size:13px;
  color:#999;
 
}
#list_name:focus ~ label, .inputsubline:valid ~ label     {
    left:-130px;
  font-size:13px;
  color:#999;
  
 
}
#default_from_name:focus ~ label, .inputsubline:valid ~ label     {
    left:-170px;
  font-size:13px;
  color:#999;
 
}
#list_description:focus ~ label, .inputsubline:valid ~ label     {
    left:-150px;
  font-size:13px;
  color:#999;
}

.inputsubline:focus ~ label, .inputsubline:valid ~ label        {
  left:-100px;
  font-size:13px;
  color:#999;
}
#reply_email_address:focus ~ label, #inputemail:valid ~ label   {
  left:-185px;
  font-size:13px;
  color:#999;
}
#title:valid ~ label,#title:focus ~ label{
    left:-55px;
  font-size:13px;
  color:#999;
} 
#from_address:focus ~ label, #inputemail:valid ~ label        {
  left:-160px;
  font-size:13px;
  color:#999;
}

#inputemail:focus ~ label, #inputemail:valid ~ label        {
  left:-40px;
  font-size:13px;
  color:#999;
}

/* active state */
#inputemail1:focus ~ label, #inputemail1:valid ~ label        {
  left:-70px;
  font-size:13px;
  color:#999;
}

#inputpassword:focus ~ label, #inputpassword:valid ~ label{
  left:-70px;
  font-size:13px;
  color:#999;
    
}
.settingPassword:focus ~ label{
  left:-132px !important;
}
#inputpassword:valid ~ label{
  left:-72px !important;
  font-size:13px !important;
  color:#999 !important;
}
#inputpassword:valid ~ label
{
  left:-70px !important;
  font-size:13px !important;
  color:#999 !important;
}
#inputreenter:focus ~ label, #inputreenter:valid ~ label{
    left:-72px;
    font-size:13px;
    color:#999;
    
}
#reply_email_address:valid ~ label,#reply_email_address:focus ~ label {
            left: -170px;
            }
            #from_address:valid ~ label,#from_address:focus ~ label {
            left: -170px;
            }


#inputcompanyname:focus ~ label, #inputcompanyname:valid ~ label        {
  
    left:-155px;
  font-size:13px;
  color:#999;
}

#inputstudio:focus ~ label, #inputstudio:valid ~ label        {
  left:-120px;
  font-size:22px;
  color:#999;
}

#inputthemename:focus ~ label, #inputthemename:valid ~ label        {
  left:-90px;
  font-size:13px;
  color:#999;
}





/*/////////////*/

#signupdiv{
    position: relative;
    top:100px;
    margin: 0 auto;
   
}
#logo{
    position: relative;
    padding-top: 20px;
    left: 509px;
}
.text-left-1{
    font-family: "proxima-nova",sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size:  12px;
    color: #3f4042;
    text-align: left;
    line-height: 14.4px;
    letter-spacing:  0em;
    pacity: 1;
}   

.text-left{
    font-family: "proxima-nova",sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size:21.5px;
    color: #3f4042;
    font-style: normal;
    text-align: left;
    line-height: 25.8px;
    letter-spacing: 0em;
    opacity: 1;    
}
.form-group{
 text-decoration: none !important;
}




/*#div1{
    position: relative;
    top:100px;
}*/
#signform{
    position: relative;
     left: -38px;   
    margin: 25px;
   
}
/*
#createaccount{
  margin-left: 45px;
}*/










/*.................css for personality.html ................*/

#contemporarycontainer{
    position: relative;
    top:50px;
}


#preview{
   position: relative;
   top:0px;
   
}
.thumbnail fancybox{
    margin: 0 auto;
}
.item{
font-family: "proxima-nova",sans-serif;
font-style: normal;
font-weight: 400;
font-size: 17px;
color: #6b6c6c;
text-align: left;
line-height:20.4px;
letter-spacing: 0em;
opacity: 1;
        
}
#buttonlength{
    
}

.comment1{
    position: relative;
/*    left:-14px;*/
}
/* ... */

